--- a/index.html
+++ b/index.html
@@ -21,6 +21,109 @@
 
 <script>
 
+    var hero = {
+        speed: 32, // movement in pixels per second
+        x:0,
+        y:0
+    }
+
+    // Hero image
+    var heroReady = false;
+    var heroImage = new Image();
+    heroImage.onload = function () {
+        heroReady = true;
+    };
+    heroImage.src = "hero.png";
+
+    var playerHasMoved = false;
+
+    var canPressKey = true;
+
+    var keysDown = {};
+
+    addEventListener("keydown", function (e) {
+
+        if (canPressKey){
+            playerHasMoved = false;
+            keysDown[e.keyCode] = true;
+            canPressKey = false;
+        }
+
+    }, false);
+
+    addEventListener("keyup", function (e) {
+        delete keysDown[e.keyCode];
+        canPressKey = true;
+    }, false);
+
+    // Reset the game when the player catches a monster
+    var reset = function () {
+        hero.x = 0;
+        hero.y = 0;
+
+    };
+
+    // Update game objects
+    var update = function (modifier) {
+        if (38 in keysDown && !playerHasMoved) { // Player holding up
+            hero.y -= hero.speed;
+            playerHasMoved = true;
+        }
+        if (40 in keysDown && !playerHasMoved) { // Player holding down
+            hero.y += hero.speed ;
+            playerHasMoved = true;
+
+        }
+        if (37 in keysDown && !playerHasMoved) { // Player holding left
+            hero.x -= hero.speed;
+            playerHasMoved = true;
+
+        }
+        if (39 in keysDown && !playerHasMoved) { // Player holding right
+            hero.x += hero.speed;
+            playerHasMoved = true;
+        }
+
+    };
+
+    // Draw everything
+    var render = function () {
+
+
+        ctx.clearRect(0,0,canvas.width, canvas.height);
+
+        if (bgReady) {
+            drawTiledBackground();
+        }
+
+        if (heroReady) {
+            ctx.drawImage(heroImage, hero.x, hero.y);
+        }
+
+
+
+        // Score
+//        ctx.fillStyle = "rgb(250, 250, 250)";
+//        ctx.font = "24px Helvetica";
+//        ctx.textAlign = "left";
+//        ctx.textBaseline = "top";
+//        ctx.fillText("Monsterrs caught: " + monstersCaught, 32, 32);
+    };
+
+    // The main game loop
+    var main = function () {
+        var now = Date.now();
+        var delta = now - then;
+
+        update(delta / 1000);
+        render();
+
+        then = now;
+
+        // Request to do this again ASAP
+        requestAnimationFrame(main);
+    };
+
     var ground = [
         [50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50],
         [50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50],
@@ -77,9 +180,14 @@
 //        [0, 0, 0, 0, 0, 0, 40, 41, 20, 21, 0, 0, 0, 0, 0, 64, 65, 66, 67, 52, 19, 19, 20, 21]
 //    ];
 
+    var bgReady = false;
     var tilesetImage = new Image();
     tilesetImage.src = 'tiles.png';
-    tilesetImage.onload = drawImage;
+    tilesetImage.onload = function () {
+        bgReady = true;
+    };
+
+
     var canvas = document.getElementById('myCanvas');
     var ctx = canvas.getContext('2d');
     var tileSize = 16;       // The size of a tile (32×32)
@@ -87,7 +195,7 @@
     var colTileCount = 40;   // The number of tiles in a column of our background
     var imageNumTiles = 13;  // The number of tiles per row in the tileset image
 
-    function drawImage () {
+    function drawTiledBackground () {
         for (var r = 0; r < rowTileCount; r++) {
             for (var c = 0; c < colTileCount; c++) {
                 var tile = ground[ r ][ c ];
@@ -103,6 +211,16 @@
             }
         }
     }
+
+    // Cross-browser support for requestAnimationFrame
+    var w = window;
+    requestAnimationFrame = w.requestAnimationFrame || w.webkitRequestAnimationFrame || w.msRequestAnimationFrame || w.mozRequestAnimationFrame;
+
+    // Let's play this game!
+    var then = Date.now();
+    reset();
+    main();
+
 </script>
 
     <br>
