Added sfx engine at 8.16kb

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 
 
-
+    <script src="jsfxr.min.js"></script>
     <title>A JS game in under 13kb</title>
 
     <style type="text/css">
@@ -24,8 +24,9 @@
     <button id=generate>&#x266a; Generate sound &#x266c;</button>
     <audio id=audio controls loop style="display: none;"></audio>
 
-    <script src="game.js"></script>
     <script src="player.js"></script>
+    <script src="game.js"></script>
+
 
 </body>
 </html>
